--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="default.css" />
   </head>
   <h1 id="title">addy?</h1>
-  <h2 id="description"</h2>
+  <h2 id="description">
+    Tired of getting asked for an addy and having to share it with all your
+    friends manually? addy? helps streamline the process of organizing kickbacks
+    and parties by allowing you to share critical details with exactly who you
+    want to know in just a few clicks.
+  </h2>
   <body></body>
 </html>
