first gif working

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     and parties by allowing you to share critical details with exactly who you
     want to know in just a few clicks.
   </h2>
+  <table>
+    <td><img id="texter-1" src="/src/images/addy-1.gif"</td>
+  </table>
   <body></body>
 </html>
