--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     and parties by allowing you to share critical details with exactly who you
     want to know in just a few clicks.
   </h2>
-  <table>
-    <td><img id="texter-1" src="/src/images/addy-1.gif"</td>
-  </table>
+  <table id="texters-table">
+    <td><img class="texters" id="texter-addy" src="/src/images/addy-1.gif"</td>
+    <td><img class="texters" id="texter-byob" src="/src/images/addy-2.gif"</td>
+    <td><img class="texters" id="texter-vibe" src="/src/images/addy-3.gif"</td>
+    <td><img class="texters" id="texter-friends" src="/src/images/addy-4.gif"</td>
+    
   <body></body>
 </html>
