cut down description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 id="title">addy?</h1>
   <h2 id="description">
     Tired of getting asked for an addy and having to share it with all your
-    friends manually? addy? helps streamline the process of organizing kickbacks
+    friends manually? addy? helps streamline organizing kickbacks
     and parties by allowing you to share critical details with exactly who you
     want to know in just a few clicks.
   </h2>
