starting on table

--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
   <h1 id="title">addy?</h1>
   <h2 id="description">
     Tired of getting asked for an addy and having to share it with all your
-    friends manually? addy? helps streamline organizing kickbacks
-    and parties by allowing you to share critical details with exactly who you
-    want to know in just a few clicks.
+    friends manually? addy? helps streamline organizing kickbacks and parties by
+    allowing you to share critical details with exactly who you want to know in
+    just a few clicks.
   </h2>
   <table id="texts-table">
     <td><img class="texts" id="text-addy" src="/src/images/addy-1.png"</td>
     <td><img class="texts" id="text-byob" src="/src/images/addy-2.png"</td>
     <td><img class="texts" id="text-friends" src="/src/images/addy-3.png"</td>
     <td><img class="texts" id="text-vibe" src="/src/images/addy-4.png"</td>
-    
+    <br />
+    <table></table>
+    <tr>
+      <td>addy?</td>
+      <td><input type="text" id="address" value=""</td>
+    </tr>
+    <tr>
+      <td>time?</td>
+    </tr>
+  </table>
+
   <body></body>
 </html>
