completed first row of table

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     <td><img class="texts" id="text-byob" src="/src/images/addy-2.png"</td>
     <td><img class="texts" id="text-friends" src="/src/images/addy-3.png"</td>
     <td><img class="texts" id="text-vibe" src="/src/images/addy-4.png"</td>
-    <br />
-    <table></table>
+  </table>
+  <br />
+  <table>
     <tr>
-      <td>addy?</td>
+      <td class="table-fields">addy?</td>
       <td><input type="text" id="address" value=""</td>
+
+      <td class="table-fields">time?</td>
+      <td><input type="datetime-local" id="time" value="" /></td>
     </tr>
-    <tr>
-      <td>time?</td>
-    </tr>
+    <tr></tr>
   </table>
 
   <body></body>
