added vibe and invite beginning

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
           </option>
         </select>
       </td>
+      <td class="table-labels">vibe?</td>
+      <td>
+        <select id="vibe-options">
+          <option value="kickback">kickback</option>
+          <option value="party">party</option>
+          <option value="rager">huge rager</option>
+          <option value="other">
+            <input type="text" id="vibe-other" value="" placeholder="other:" />
+          </option>
+        </select>
+      </td>
     </tr>
   </table>
 
