build text preview function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <td><input type="text" id="address" value=""</td>
 
         <td class="table-labels">time?</td>
-        <td><input type="datetime-local" id="time" value="" /></td>
+        <td><input type="time" id="time" value="" /></td>
       </tr>
       <tr>
         <td class="table-labels">byob?</td>
