rounded borders for dropdown menus

--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
 
       <th></th>
       <td>
-        <textarea id="preview-text" rows="5" cols="50"></textarea>
+        <textarea
+          id="preview-text"
+          rows="5"
+          cols="50"
+          contenteditable
+        ></textarea>
       </td>
     </table>
   </body>
