preview shows 12h time

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
         <td class="table-labels">time?</td>
         <td>
-          <input type="time" id="time" value="" onchange="updatePreview()" />
+          <input
+            type="datetime-local"
+            id="time"
+            value=""
+            onchange="updatePreview()"
+          />
         </td>
       </tr>
       <tr>
