added basic copy button in

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
           contenteditable
         ></textarea>
       </td>
+      <tr>
+        <td colspan="2" id="copy-button-cell">
+          <button id="copy-button">
+            <img id="copy-image" src="/src/images/copy.png" />
+          </button>
+        </td>
+      </tr>
     </table>
   </body>
   <script src="app.js"></script>
