copy text kinda works

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <select id="vibe-options" onchange="updatePreview()">
             <option value="Kickback">kickback</option>
             <option value="Party">party</option>
-            <option value="Rager">huge rager</option>
+            <option value="Huge rager">huge rager</option>
           </select>
         </td>
       </tr>
@@ -58,7 +58,7 @@
         <td class="table-labels">invite?</td>
         <td>
           <select id="invite-options" onchange="updatePreview()">
-            <option value="nobody">nobody else</option>
+            <option value="just yourself">just yourself</option>
             <option value="significant others">significant others</option>
             <option value="mutual friends">mutual friends</option>
             <option value="everyone">everyone</option>
