update invite options

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <td class="table-labels">invite?</td>
         <td>
           <select id="invite-options" onchange="updatePreview()">
-            <option value="just yourself">just yourself</option>
+            <option value="nobody else">nobody else</option>
             <option value="significant others">significant others</option>
             <option value="mutual friends">mutual friends</option>
             <option value="everyone">everyone</option>
