--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         ></textarea>
       </td>
       <tr>
-        <td colspan="2" id="copy-button-cell">
+        <td id="copy-button-cell">
           <button id="copy-button">
             <img id="copy-image" src="/src/images/copy.png" />
           </button>
