started share table

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </table>
     <br />
     <table id="preview-table">
-      <th>Invite preview:</th>
+      <th class="table-labels" id="preview-label">Invite preview:</th>
 
       <th></th>
       <td>
@@ -80,11 +80,13 @@
         ></textarea>
       </td>
       <tr>
-        <td colspan="2" id="copy-button-cell">
-          <button id="copy-button">
-            <img id="copy-image" src="/src/images/copy.png" />
-          </button>
-        </td>
+        <table id="share-table">
+          <td id="copy-button-cell">
+            <button id="copy-button">
+              <img id="copy-image" src="/src/images/copy.png" />
+            </button>
+          </td>
+        </table>
       </tr>
     </table>
   </body>
