--- a/index.html
+++ b/index.html
@@ -82,8 +82,21 @@
       <tr>
         <table id="share-table">
           <td id="copy-button-cell">
-            <button id="copy-button">
-              <img id="copy-image" src="/src/images/copy.png" />
+            <button class="share-buttons" id="copy-button">
+              <img
+                class="share-images"
+                id="copy-image"
+                src="/src/images/copy.png"
+              />
+            </button>
+          </td>
+          <td id="insta-button-cell">
+            <button class="share-buttons" id="insta-button">
+              <img
+                class="share-images"
+                id="insta-image"
+                src="/src/images/instagram.png"
+              />
             </button>
           </td>
         </table>
