added all share icons

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
               />
             </button>
           </td>
+          <td id="snap-button-cell">
+            <button class="share-buttons" id="snap-button">
+              <img
+                class="share-images"
+                id="snap-image"
+                src="/src/images/snapchat.png"
+              />
+            </button>
+          </td>
         </table>
       </tr>
     </table>
