static skeleton flyer

--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
             <option value="everyone">everyone</option>
           </select>
         </td>
+        <td></td>
+        <td></td>
+        <td>
+          <table id="flyer-table">
+            <tr>
+              <td id="flyer-title">Party at 805 N Warner</td>
+            </tr>
+            <tr>
+              <td id="flyer-time">Saturday 10PM</td>
+            </tr>
+            <tr>
+              <td id="flyer-byob">BYOB</td>
+            </tr>
+            <tr>
+              <td id="flyer-invite">Bring mutual friends!</td>
+            </tr>
+          </table>
+        </td>
       </tr>
     </table>
     <br />
