got basic style of table

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
     </table>
     <table id="flyer-table">
       <tr>
-        <td id="flyer-title">Party at 805 N Warner</td>
+        <td id="flyer-title">PARTY @ 805 N WARNER</td>
       </tr>
       <tr>
-        <td id="flyer-time">Saturday 10PM</td>
+        <td id="flyer-time">Saturday @ 10PM</td>
       </tr>
       <tr>
         <td id="flyer-byob">BYOB</td>
