more table styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                 >
                   <option value="nobody else">nobody else</option>
                   <option value="significant others">significant others</option>
+                  <option value="close friends">close friends</option>
                   <option value="mutual friends">mutual friends</option>
+                  <option value="all your friends">all friends</option>
                   <option value="everyone">everyone</option>
                 </select>
               </td>
@@ -138,6 +140,9 @@
           </tr>
           <tr>
             <td id="flyer-invite"></td>
+          </tr>
+          <tr>
+            <td id="watermark">addy?</td>
           </tr>
         </table>
       </td>
