--- a/index.html
+++ b/index.html
@@ -140,6 +140,35 @@
             <td id="flyer-invite"></td>
           </tr>
         </table>
+        <table id="share-table">
+          <td id="copy-button-cell">
+            <button class="share-buttons" id="copy-button">
+              <img
+                class="share-images"
+                id="copy-image"
+                src="/src/images/copy.png"
+              />
+            </button>
+          </td>
+          <td id="insta-button-cell">
+            <button class="share-buttons" id="insta-button">
+              <img
+                class="share-images"
+                id="insta-image"
+                src="/src/images/instagram.png"
+              />
+            </button>
+          </td>
+          <td id="snap-button-cell">
+            <button class="share-buttons" id="snap-button">
+              <img
+                class="share-images"
+                id="snap-image"
+                src="/src/images/snapchat.png"
+              />
+            </button>
+          </td>
+        </table>
       </td>
     </table>
   </body>
