--- a/index.html
+++ b/index.html
@@ -111,49 +111,59 @@
         </table>
       </tr>
     </table>
+    <table id="flyer-everything">
+      <tr>
+        <td>
+          <table id="flyer-table">
+            <tr>
+              <td id="flyer-title"></td>
+            </tr>
 
-    <table id="flyer-table">
-      <tr>
-        <td id="flyer-title"></td>
+            <tr>
+              <td id="flyer-time"></td>
+            </tr>
+            <tr>
+              <td id="flyer-byob"></td>
+            </tr>
+            <tr>
+              <td id="flyer-invite"></td>
+            </tr>
+          </table>
+        </td>
       </tr>
       <tr>
-        <td id="flyer-time"></td>
-      </tr>
-      <tr>
-        <td id="flyer-byob"></td>
-      </tr>
-      <tr>
-        <td id="flyer-invite"></td>
-      </tr>
-    </table>
-    <table id="share-table-flyer">
-      <td id="save-button-cell-flyer">
-        <button class="share-buttons-flyer" id="save-button-flyer">
-          <img
-            class="share-images-flyer"
-            id="save-image-flyer"
-            src="/src/images/save_image.png"
-          />
-        </button>
+      <td>
+      <table id="share-table-flyer">
+        <td id="save-button-cell-flyer">
+          <button class="share-buttons-flyer" id="save-button-flyer">
+            <img
+              class="share-images-flyer"
+              id="save-image-flyer"
+              src="/src/images/save_image.png"
+            />
+          </button>
+        </td>
+        <td id="insta-button-cell-flyer">
+          <button class="share-buttons-flyer" id="insta-button-cell-flyer">
+            <img
+              class="share-images-flyer"
+              id="insta-image-flyer"
+              src="/src/images/instagram.png"
+            />
+          </button>
+        </td>
+        <td id="snap-button-cell-flyer">
+          <button class="share-buttons-flyer" id="snap-button-cell-flyer">
+            <img
+              class="share-images"
+              id="snap-image-flyer"
+              src="/src/images/snapchat.png"
+            />
+          </button>
+        </td>
       </td>
-      <td id="insta-button-cell-flyer">
-        <button class="share-buttons-flyer" id="insta-button-cell-flyer">
-          <img
-            class="share-images-flyer"
-            id="insta-image-flyer"
-            src="/src/images/instagram.png"
-          />
-        </button>
-      </td>
-      <td id="snap-button-cell-flyer">
-        <button class="share-buttons-flyer" id="snap-button-cell-flyer">
-          <img
-            class="share-images"
-            id="snap-image-flyer"
-            src="/src/images/snapchat.png"
-          />
-        </button>
-      </td>
+      </tr>
+      </table>
     </table>
   </body>
   <script src="app.js"></script>
