--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <td><img class="texts" id="text-vibe" src="/src/images/addy-4.png"</td>
     </table>
     <br />
+    <table id="everything-table">
+      <tr>
+        <td>
     <table id="options-and-preview-table">
       <tr>
         <td>
@@ -122,6 +125,9 @@
    
 
     
+  </table>
+        </td>
+    </tr>
   </table>
     <table id="flyer-everything">
       <tr>
