positioned share icons for preview

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                 contenteditable
               ></textarea>
             </td>
-            <tr>
+            <tr id="share-row">
               <table id="share-table">
+                <td></td>
                 <td id="copy-button-cell">
                   <button class="share-buttons" id="copy-button">
                     <img
