--- a/index.html
+++ b/index.html
@@ -188,4 +188,5 @@
     
   </body>
   <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@grabzit/js@3.5.2/grabzit.min.js"></script>
 </html>
