added jquery library

--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
           </td>
     </tr>
   </table>
-    
   </body>
   <script src="app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@grabzit/js@3.5.2/grabzit.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="tableExport.jquery.plugin/html2canvas.js"></script>
+  
+
 </html>
