got all scripts in?

--- a/index.html
+++ b/index.html
@@ -187,8 +187,11 @@
   </table>
   </body>
   <script src="app.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="tableExport.jquery.plugin/html2canvas.js"></script>
+  <!-- <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/FileSaver/FileSaver.min.js"></script> -->
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/es6-promise/es6-promise.auto.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/html2canvas/html2canvas.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/tableExport.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   
 
 </html>
