--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     </tr>
   </table>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="app.js"></script>
 
 </html>
