added script srcs

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
   </table>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/FileSaver/FileSaver.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/es6-promise/es6-promise.auto.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/html2canvas/html2canvas.min.js"></script>
+  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/tableExport.min.js"></script>
   <script src="app.js"></script>
 
 </html>
