--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>addy?</title>
     <link rel="stylesheet" href="default.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="src/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="src/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="src/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/src/favicon_io/site.webmanifest">
   </head>
   <body>
     <h1 id="title">addy?</h1>
@@ -66,7 +70,9 @@
                 <select id="invite-options" onchange="updatePreview(), updateFlyer()">
                   <option value="nobody else">nobody else</option>
                   <option value="significant others">significant others</option>
+                  <option value="close friends">close friends</option>
                   <option value="mutual friends">mutual friends</option>
+                  <option value="all your friends">all friends</option>
                   <option value="everyone">everyone</option>
                 </select>
               </td>
