added other option for vibe

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                   <option value="Kickback">kickback</option>
                   <option value="Party">party</option>
                   <option value="Huge rager">huge rager</option>
+                  <option><input type="text" id="vibe-other" class="others" placeholder="Other:" onchange="updatePreview(), updateFlyer()"></option>
                 </select>
               </td>
             </tr>
