all other values working

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <option value="mutual friends">mutual friends</option>
                   <option value="all your friends">all friends</option>
                   <option value="everyone">everyone</option>
-                  <!-- <option><input type="text" id="invite-other" class="others" placeholder="Other:" onchange="updatePreview(), updateFlyer()"></option> -->
+                  <option><input type="text" id="invite-other" class="others" placeholder="Other:" onchange="updatePreview(), updateFlyer()"></option>
                 </select>
               </td>
             </tr>
