venmo works on preview text

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                   <option><input type="text" id="invite-other" class="others" placeholder="Other:" onchange="updatePreview(), updateFlyer()"></option>
                 </select>
               </td>
+              <td class="table-labels">venmo?</td>
+              <td><input type="text" id="venmo" value="" placeholder="Username and amount:" onchange="updatePreview(), updateFlyer()"></td>
             </tr>
           </table>
         </td>
