flyer preview now works with venmo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <select id="vibe-options" onchange="updatePreview(), updateFlyer()">
                   <option value="Kickback">kickback</option>
                   <option value="Party">party</option>
-                  <option value="Huge rager">huge rager</option>
+                  <option value="Rager">rager</option>
                   <option><input type="text" id="vibe-other" class="others" placeholder="Other:" onchange="updatePreview(), updateFlyer()"></option>
                 </select>
               </td>
@@ -132,6 +132,9 @@
                   </tr>
                   <tr>
                     <td id="flyer-byob"></td>
+                  </tr>
+                  <tr>
+                    <td id="flyer-venmo"></td>
                   </tr>
                   <tr>
                     <td id="flyer-invite"></td>
