--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   </head>
   <body>
     <h1 id="title">addy?</h1>
-    <h2 id="description">
+    <h2 id="description" class="descriptions">
       Tired of getting asked for an addy and having to share it with all your
       friends manually? addy? helps streamline organizing kickbacks and parties
       by allowing you to share critical details with exactly who you want to
-      know in just a few clicks.
+      know in just a few clicks.</h2>
+      <h3 id="github" class="descriptions">The source code for addy? along with a rough list of future planned updates
+        is available on <a href="https://github.com/visserjackson/addy-app" target="_blank">Github</a>.</h3>
     </h2>
     <table id="texts-table">
       <td><img class="texts" id="text-addy" src="/src/images/addy-1.png"</td>
@@ -32,7 +34,7 @@
     <table id="options-and-preview-table">
       <tr>
         <td>
-          <table id="options-table">
+          <table id="options-table" class="padding-between-cols">
             <tr>
               <td class="table-labels">addy?</td>
               <td><input type="text" id="address" value=""</td>
