updated srcs for github

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>addy?</title>
     <link rel="stylesheet" href="default.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="src/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="src/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="src/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="/src/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/addy-app/src/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/addy-app/src/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/addy-app/src/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/addy-app/src/favicon_io/site.webmanifest">
   </head>
   <body>
     <h1 id="title">addy?</h1>
@@ -22,10 +22,10 @@
         is available on <a href="https://github.com/visserjackson/addy-app" target="_blank">Github</a>.</h3>
     </h2>
     <table id="texts-table">
-      <td><img class="texts" id="text-addy" src="/src/images/addy-1.png"</td>
-      <td><img class="texts" id="text-byob" src="/src/images/addy-2.png"</td>
-      <td><img class="texts" id="text-friends" src="/src/images/addy-3.png"</td>
-      <td><img class="texts" id="text-vibe" src="/src/images/addy-4.png"</td>
+      <td><img class="texts" id="text-addy" src="/addy-app/src/images/addy-1.png"</td>
+      <td><img class="texts" id="text-byob" src="/addy-app/src/images/addy-2.png"</td>
+      <td><img class="texts" id="text-friends" src="/addy-app/src/images/addy-3.png"</td>
+      <td><img class="texts" id="text-vibe" src="/addy-app/src/images/addy-4.png"</td>
     </table>
     <br />
     <table id="everything-table">
@@ -109,7 +109,7 @@
                     <img
                       class="share-images"
                       id="copy-image"
-                      src="/src/images/copy.png"
+                      src="/addy-app/src/images/copy.png"
                     />
                   </button>
                 </td>
@@ -155,7 +155,7 @@
                   <img
                     class="share-images-flyer"
                     id="save-image-flyer"
-                    src="/src/images/save_image.png"
+                    src="/addy-app/src/images/save_image.png"
                   />
                 </button>
               </td>
@@ -167,9 +167,9 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/FileSaver/FileSaver.min.js"></script> -->
-  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/es6-promise/es6-promise.auto.min.js"></script>
-  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/libs/html2canvas/html2canvas.min.js"></script>
-  <script type="text/javascript" src="node_modules/tableexport.jquery.plugin/tableExport.min.js"></script>
-  <script src="app.js"></script>
+  <script type="text/javascript" src="/addy-app/node_modules/tableexport.jquery.plugin/libs/es6-promise/es6-promise.auto.min.js"></script>
+  <script type="text/javascript" src="/addy-app/node_modules/tableexport.jquery.plugin/libs/html2canvas/html2canvas.min.js"></script>
+  <script type="text/javascript" src="/addy-app/node_modules/tableexport.jquery.plugin/tableExport.min.js"></script>
+  <script src="/addy-app/app.js"></script>
 
 </html>
